--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/native-stack": "^7.2.1",
     "react": "19.0.0",
     "react-native": "0.78.0",
+    "react-native-gesture-handler": "^2.24.0",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-reanimated": "^3.17.1",
     "react-native-safe-area-context": "^5.3.0",
