--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "lottie-react-native": "^7.2.2",
     "react": "19.0.0",
     "react-native": "0.78.0",
+    "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.24.0",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-reanimated": "^3.17.1",
     "react-native-safe-area-context": "^5.3.0",
     "react-native-screens": "^4.9.2",
+    "react-native-sqlite-storage": "^6.0.1",
     "react-native-vector-icons": "^10.2.0"
   },
   "devDependencies": {
