--- a/app.json
+++ b/app.json
@@ -1,4 +1,7 @@
 {
   "name": "Braintest",
-  "displayName": "Braintest"
+  "displayName": "Braintest",
+   "react-native-google-mobile-ads": {
+    "android_app_id": "ca-app-pub-7633228298096492~7079873038"
+  }
 }
