--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-native": "0.78.0",
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.24.0",
+    "react-native-google-mobile-ads": "^15.4.0",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-reanimated": "^3.17.1",
     "react-native-safe-area-context": "^5.3.0",
