added ci / cd for closed testing

--- a/.gitignore
+++ b/.gitignore
@@ -35,6 +35,32 @@ local.properties
 !debug.keystore
 .kotlin/
 
+# Security & Credentials - CRITICAL TO IGNORE
+#
+# Google Play Store credentials
+**/playstore-credentials.json
+playstore-credentials.json
+google-services.json
+# Firebase config (if using Firebase)
+GoogleService-Info.plist
+# Release keystore (keep your release keys secure!)
+*.jks
+app-release-key.keystore
+release.keystore
+# Environment variables with secrets
+.env
+.env.local
+.env.production
+.env.staging
+# AWS credentials
+.aws/
+# Any credential or config files
+**/credentials/
+**/secrets/
+**/*-credentials.*
+**/*-secret.*
+**/*-config.json
+
 # node.js
 #
 node_modules/
@@ -47,7 +73,6 @@ yarn-error.log
 # screenshots whenever they are needed.
 # For more information about the recommended setup visit:
 # https://docs.fastlane.tools/best-practices/source-control/
-
 **/fastlane/report.xml
 **/fastlane/Preview.html
 **/fastlane/screenshots
@@ -73,3 +98,18 @@ yarn-error.log
 !.yarn/releases
 !.yarn/sdks
 !.yarn/versions
+
+# Logs
+*.log
+logs/
+
+# IDE specific files
+.vscode/
+*.swp
+*.swo
+*~
+
+# Backup files
+*.bak
+*.backup
+*.orig
